@@ -109,6 +109,15 @@ foreach my $datum (@telco_length_data) {
     #     warn "  check this and remove the warning if fixed in XLS file (last checked 2017/06/20)\n";
     #     if($format eq '') { $format = '4+6' }
     # }
+
+	# see https://github.com/DrHyde/perl-modules-Number-Phone/issues/112
+	# checked on 2022-12-24
+	# next check due 2023-06-01 (semi-annually)
+	if($prefix eq '800716') {
+		warn "Correcting OFCOM's broken data for 8007 16\n";
+		$format = '0+9/10';
+	}
+
     if($format eq '') {
         if(    $prefix =~ /^[37]/     ) { $format = '10 digit numbers' }
          elsif($prefix =~ /^2/        ) { $format = '2+8' }
